# wgpu-web-example

./: Cargo.toml
scripts/: build_wasm.bat  serve.py
src/: main.rs
webroot/: index.html
